// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input is readOnly 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <input
      class="input"
      readonly=""
      value=""
    />
  </div>
</div>
`;

exports[`Input renders correctly 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <input
      class="input"
      value=""
    />
  </div>
</div>
`;

exports[`Input renders with a value 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <input
      class="input"
      value="there is value"
    />
  </div>
</div>
`;

exports[`Input renders with placeholder 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <input
      class="input"
      placeholder="0.0000"
      value=""
    />
  </div>
</div>
`;
